--- a/JWTExample/appsettings.json
+++ b/JWTExample/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {"Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=JWTExample00;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"},
+  "Jwt": {
+    "Issuer": "example.com",
+    "Audience": "example.com",
+    "Key": "This is super secret key for example.com"
+  }
 }
